force-app/main/default/objects/Term_Sheet__c/Term_Sheet__c.object-meta.xml
<CustomObject>
    <description>Custom object to track deal structures for counterparties involved in capital markets engagements.</description>
    <label>Term Sheet</label>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>Term Sheet #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>