force-app/main/default/objects/Term_Sheet__c/fields/Borrowing_Base__c.field-meta.xml
<CustomField>
    <fullName>Borrowing_Base__c</fullName>
    <label>Borrowing Base</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>