force-app/main/default/objects/Term_Sheet__c/fields/Counterparty__c.field-meta.xml
<CustomField>
    <fullName>Counterparty__c</fullName>
    <label>Counterparty</label>
    <referenceTo>Engagement_Counterparty__c</referenceTo>
    <relationshipName>Deal_Structures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>