force-app/main/default/objects/Term_Sheet__c/fields/Covenant_Cushion__c.field-meta.xml
<CustomField>
    <fullName>Covenant_Cushion__c</fullName>
    <label>Covenant Cushion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>