force-app/main/default/objects/Term_Sheet__c/fields/ECF_Sweep__c.field-meta.xml
<CustomField>
    <fullName>ECF_Sweep__c</fullName>
    <label>ECF Sweep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>