force-app/main/default/objects/Term_Sheet__c/fields/Exit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Exit_Fee__c</fullName>
    <label>Exit Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>