force-app/main/default/objects/Term_Sheet__c/fields/Financial_Covenant_Description__c.field-meta.xml
<CustomField>
    <fullName>Financial_Covenant_Description__c</fullName>
    <label>Financial Covenant Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>