force-app/main/default/objects/Term_Sheet__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>