force-app/main/default/objects/Term_Sheet__c/fields/Hold_Size_MM__c.field-meta.xml
<CustomField>
    <fullName>Hold_Size_MM__c</fullName>
    <label>Hold Size ($MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>