force-app/main/default/objects/Term_Sheet__c/fields/Maturity__c.field-meta.xml
<CustomField>
    <fullName>Maturity__c</fullName>
    <inlineHelpText>Years</inlineHelpText>
    <label>Maturity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>