force-app/main/default/objects/Term_Sheet__c/fields/of_Financial_Covenants__c.field-meta.xml
<CustomField>
    <fullName>of_Financial_Covenants__c</fullName>
    <label># of Financial Covenants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>