force-app/main/default/objects/Term_Sheet__c/fields/Other_Fees_and_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Other_Fees_and_Expenses__c</fullName>
    <label>Other Fees and Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>