force-app/main/default/objects/Term_Sheet__c/fields/PIK__c.field-meta.xml
<CustomField>
    <fullName>PIK__c</fullName>
    <label>PIK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>