force-app/main/default/objects/Term_Sheet__c/fields/Prepayment_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Penalty__c</fullName>
    <label>Prepayment Penalty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>