force-app/main/default/objects/Term_Sheet__c/fields/Size_MM__c.field-meta.xml
<CustomField>
    <fullName>Size_MM__c</fullName>
    <label>Size ($MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>