force-app/main/default/objects/Term_Sheet__c/fields/Spread__c.field-meta.xml
<CustomField>
    <fullName>Spread__c</fullName>
    <label>Spread</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>