force-app/main/default/objects/Term_Sheet__c/fields/Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>Structure_Type__c</fullName>
    <label>Structure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2nd Lien</fullName>
            </value>
            <value>
                <fullName>ABL Revolver</fullName>
            </value>
            <value>
                <fullName>Bridge Loan</fullName>
            </value>
            <value>
                <fullName>CF Revolver</fullName>
            </value>
            <value>
                <fullName>Common Equity</fullName>
            </value>
            <value>
                <fullName>Convertible Preferred Equity</fullName>
            </value>
            <value>
                <fullName>DDTL</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>Structured Equity</fullName>
            </value>
            <value>
                <fullName>Term Loan A</fullName>
            </value>
            <value>
                <fullName>Term Loan B</fullName>
            </value>
            <value>
                <fullName>Unitranche</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>