force-app/main/default/objects/Term_Sheet__c/fields/Tenor__c.field-meta.xml
<CustomField>
    <fullName>Tenor__c</fullName>
    <label>Tenor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>