force-app/main/default/objects/Term_Sheet__c/fields/Unused_Line_Fee__c.field-meta.xml
<CustomField>
    <fullName>Unused_Line_Fee__c</fullName>
    <label>Unused Line Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>