force-app/main/default/objects/Term_Sheet__c/fields/Up_Front_Fee_OID__c.field-meta.xml
<CustomField>
    <fullName>Up_Front_Fee_OID__c</fullName>
    <label>Up Front Fee / OID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>