force-app/main/default/objects/Term_Sheet__c/fields/Warrants_Equity__c.field-meta.xml
<CustomField>
    <fullName>Warrants_Equity__c</fullName>
    <label>Warrants / Equity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>